Source/WebCore/rendering/style/RenderStyle.cpp
@@ -1381,6 +1381,9 @@ void RenderStyle::setWordSpacing(Length value)
     case Fixed:
         fontWordSpacing = value.value();
         break;
+    case Calculated:
+        fontWordSpacing = value.nonNanCalculatedValue(maxValueForCssLength);
+        break;
     default:
         ASSERT_NOT_REACHED();
         fontWordSpacing = 0;
